--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -9,7 +9,7 @@
     <link href="css/app.css" rel="stylesheet" />
 </head>
 <body onload="preload()">
-    <canvas id="canvas" width="640" height="480"></canvas>
+    <canvas id="canvas" width="480" height="640"></canvas>
 
     <!-- JavaScript Section -->
     <script src="Scripts/lib/jquery-2.1.1.min.js"></script>
@@ -22,7 +22,7 @@
     <script src="Scripts/objects/cloud.js"></script>
     <script src="Scripts/objects/island.js"></script>
     <script src="Scripts/objects/ocean.js"></script>
-    <script src="Scripts/objects/plane.js"></script>
+    <script src="Scripts/objects/player.js"></script>
     <script src="Scripts/objects/scoreboard.js"></script>
     <script src="Scripts/objects/button.js"></script>
     <script src="Scripts/objects/label.js"></script>
