swapped background image to match item background, created collectables and hazards, instanciated collectables, removed islands

--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>mailPilot_v11</title>
+    <title>Crystal Plains</title>
     <!-- CSS Section -->
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
 </head>
 <body onload="preload()">
-    <canvas id="canvas" width="480" height="640"></canvas>
+    <canvas id="canvas" width="480" height="445"></canvas>
 
     <!-- JavaScript Section -->
     <script src="Scripts/lib/jquery-2.1.1.min.js"></script>
@@ -20,7 +20,8 @@
     <script src="Scripts/constants.js"></script>
     <script src="Scripts/managers/asset.js"></script>
     <script src="Scripts/objects/cloud.js"></script>
-    <script src="Scripts/objects/island.js"></script>
+    <script src="Scripts/objects/crystal.js"></script>
+    <script src="Scripts/objects/lifeOrb.js"></script>
     <script src="Scripts/objects/land.js"></script>
     <script src="Scripts/objects/player.js"></script>
     <script src="Scripts/objects/scoreboard.js"></script>
