--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -9,7 +9,7 @@
     <link href="css/app.css" rel="stylesheet" />
 </head>
 <body onload="preload()">
-    <canvas id="canvas" width="480" height="445"></canvas>
+    <canvas id="canvas" width="550" height="445"></canvas>
 
     <!-- JavaScript Section -->
     <script src="Scripts/lib/jquery-2.1.1.min.js"></script>
@@ -20,6 +20,7 @@
     <script src="Scripts/constants.js"></script>
     <script src="Scripts/managers/asset.js"></script>
     <script src="Scripts/objects/cloud.js"></script>
+    <script src="Scripts/objects/hazards.js"></script>
     <script src="Scripts/objects/crystal.js"></script>
     <script src="Scripts/objects/lifeOrb.js"></script>
     <script src="Scripts/objects/land.js"></script>
