added program headers, added 4 new obstacles to game, attempted to prevent overlapping of objects, removed all old unnecessary files from mailpilot template,

--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -19,8 +19,11 @@
     <script src="Scripts/lib/preloadjs-0.4.1.min.js"></script>
     <script src="Scripts/constants.js"></script>
     <script src="Scripts/managers/asset.js"></script>
-    <script src="Scripts/objects/cloud.js"></script>
     <script src="Scripts/objects/hazards.js"></script>
+    <script src="Scripts/objects/horPit.js"></script>
+    <script src="Scripts/objects/horFirePit.js"></script>
+    <script src="Scripts/objects/vertPit.js"></script>
+    <script src="Scripts/objects/vertFirePit.js"></script>
     <script src="Scripts/objects/crystal.js"></script>
     <script src="Scripts/objects/lifeOrb.js"></script>
     <script src="Scripts/objects/land.js"></script>
