--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -20,6 +20,7 @@
     <script src="Scripts/constants.js"></script>
     <script src="Scripts/managers/asset.js"></script>
     <script src="Scripts/objects/hazards.js"></script>
+    <script src="Scripts/objects/background.js"></script>
     <script src="Scripts/objects/crystal.js"></script>
     <script src="Scripts/objects/lifeOrb.js"></script>
     <script src="Scripts/objects/land.js"></script>
