shrank start screen to match window size. implemented levels 2 and 3, when selecting difficulty enemies will double and triple respectively to each level. allowed level 2 and 3 to have different backgrounds.

--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -28,9 +28,13 @@
     <script src="Scripts/objects/scoreboard.js"></script>
     <script src="Scripts/objects/button.js"></script>
     <script src="Scripts/objects/label.js"></script>
+    <script src="Scripts/objects/level.js"></script>
+    <script src="Scripts/objects/enemy.js"></script>
     <script src="Scripts/managers/collision.js"></script>
     <script src="Scripts/states/menu.js"></script>
     <script src="Scripts/states/play.js"></script>
+    <script src="Scripts/states/level2.js"></script>
+    <script src="Scripts/states/level3.js"></script>
     <script src="Scripts/states/gameover.js"></script>
     <script src="Scripts/game.js"></script>
 </body>
