--- a/mailPilot-v11/index.html
+++ b/mailPilot-v11/index.html
@@ -27,6 +27,7 @@
     <script src="Scripts/objects/player.js"></script>
     <script src="Scripts/objects/scoreboard.js"></script>
     <script src="Scripts/objects/button.js"></script>
+    <script src="Scripts/objects/helpButton.js"></script>
     <script src="Scripts/objects/label.js"></script>
     <script src="Scripts/objects/level.js"></script>
     <script src="Scripts/objects/enemies.js"></script>
